refactor: 입력 값 공백 제거